sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: not found: value True
  var switch=True
             ^AlgBubbleSort1:5: error: not found: value False
    switch=False
           ^AlgBubbleSort1:7: error: not found: value True
      if (plusPetit(k+1,k)) {echange(k,k+1);switch=True}
                                                   ^